--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "validator": "^13.15.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "name": "project",
   "version": "1.0.0",
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "homepage": "https://saketh169.github.io/FFSD-NUTRI-CONNECT"
 }
