--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1",
+    "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.10",
@@ -25,7 +25,7 @@
     "validator": "^13.15.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "name": "project",
   "version": "1.0.0",
