Add @types/node to resolve TypeScript type warnings

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^25.0.3"
+  }
 }
